tests/type-reconstruction/ill-typed/exceptions/exceptions-2.stella
language core;

extend with #exceptions, #exception-type-declaration, #type-reconstruction;

exception type = Bool

fn main(a : auto) -> auto {
  return (throw(0))(throw(0))
}